--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="BD Calling Test"
 APP_ENV=local
 APP_KEY=base64:OmMx4tGEcWTSoro8l7YsyEROuSEFYvfIbQmGLeUJqL0=
 APP_DEBUG=true
